重构Task持久化机制，创建基础Task包
- 新增 org.dragon.task 包，包含 Task、TaskStatus、TaskStore、MemoryTaskStore
- Task 实体支持执行过程、流式消息等字段
- ReActExecutor 支持流式LLM调用，将流式内容写入Task
- Character 新增带 streaming 和 task 参数的 runReAct 方法
- 删除旧的 workspace.task 包及相关类
- 更新 WorkspaceTaskArrangementService 和 WorkspaceTaskService 使用新 TaskStore